# chakravyuh-ai

./: .env.example  .gitignore  ADOPTERS.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  FAQ.md  MODELS.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  SUPPORT.md  VISION.md  dashboard.html  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
agents/: __init__.py  base.ts  browser.py  coder.py  coordinator.py  deployment.py  github.py  memory_agent.py  planner.py  qa.py  researcher.py  security.py
api/: app.py
backend/: package.json
cli/: __init__.py  __main__.py  config.py  main.py  ollama.py  tui.py  tui_app.py
config/: agents.yaml  mcp.yaml  providers.yaml
core/: __init__.py  base_agent.py  control_agent.py  event_bus.py  orchestrator.py  prompt_engineer.py  terminal_manager.py  types.py
docker/: Dockerfile  docker-compose.gpu-amd.yml  docker-compose.yml  entrypoint.sh  gpu.amd.yml  gpu.nvidia.yml
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  FAQ.md  GOVERNANCE.md  IDEAS.md  MCP_SERVERS.md  MODELS.md  README.md  SETUP.md  VISION.md
examples/: README.md  basic-chat.mjs  custom-agent.mjs  workflow.mjs
issues/: 01-frontend-web-ui-dashboard.md  02-multi-project-agent-scheduler.md  03-free-agent-integration-ollama-opencode.md  04-real-time-agent-monitoring-websocket.md  05-human-in-the-loop-approval-gates.md  06-agent-memory-persistence.md  07-agent-to-agent-communication-protocol.md  12-cli-command-line-tool.md  (+8 more)
(+155 files in other folders)
